# mycellm

./: .gitignore  BETA_TESTING.md  CLAUDE.md  KNOWN_ISSUES.md  README.md  pyproject.toml
.github/workflows/: ci.yml  lint-and-test.yml
docker/: .env.prod  .env.prod.example  Dockerfile  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
docs/: identity-binding.md  protocol-envelope.md  spec-evolution.md
docs/site/: mkdocs.yml
docs/site/docs/: index.md
docs/site/site/: 404.html  index.html  (+1 more)
ops/: README.md
ops/backup/: README.md
ops/caddy/: mycellm.caddyfile
scripts/: deploy-site.sh  install.sh  poc_deploy.sh  poc_test.sh  transport_spike.py
site/: index.html  install.sh  join.html  network.html  portal.html
site-v2/: astro.config.mjs  package-lock.json  package.json  tailwind.config.cjs
site-v2/public/: humans.txt  install.ps1  robots.txt  teaser.html
src/mycellm/: __init__.py  activity.py  federation.py  metrics.py  node.py  privacy.py  secrets.py
tests/e2e/: harness.py  test_harness.py  test_three_nodes.py
tests/integration/: test_api.py  test_full_api.py  test_transport.py
tests/unit/: test_accounting.py  test_activity.py  test_admission.py  test_auto_approve.py  test_auto_model.py  test_credit_enforcement.py  test_embeddings.py  test_federation.py  test_fleet_admin.py  test_fleet_messages.py  test_fleet_relay.py  test_gateway.py  test_health_metrics.py  test_init.py  test_metrics.py  test_model_persistence.py  test_model_search.py  test_multi_network.py  test_openai_backend.py  test_peer_exchange.py  test_privacy.py  test_public_stats.py  test_quality.py  test_quic_framing.py  test_receipts.py  test_relay.py  test_reputation.py  test_router.py  test_secrets.py  test_security.py  test_storage.py  test_streaming.py  test_streaming_connection.py  test_telemetry.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
web/src/: App.jsx  App.tsx  index.css  main.tsx
(+280 files in other folders)
